Add checking express edition instance SQLEXPRESS to needed version of engine.

--- a/SqlExpressChk/SqlExpressChk.vcproj
+++ b/SqlExpressChk/SqlExpressChk.vcproj
@@ -208,6 +208,10 @@
 				RelativePath=".\targetver.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Version.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
